gitops/apps/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
